# kensho

./: .dockerignore  .gitignore  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  embed.go  go.mod  inbox_skill_test.go  package-lock.json  package.json  release_config_test.go  sentinel_docs_marker_test.go  topology_repository_contract_test.go
.agent_squad/: config.toml
.agent_team/: agents  config.toml  instances.toml  skills
.claude/: settings.json
.claude-plugin/: marketplace.json
.worker_agent/: plan.md  progress.md
cli/: README.md  pyproject.toml
cli/src/agent_squad/: __main__.py  cli.py
cli/src/agent_squad/commands/: __init__.py  add.py  doctor.py  init.py  sync.py
cli/src/agent_squad/template/: config.toml.example
cli/src/agent_squad/template/.claude-plugin/: plugin.json
cli/src/agent_squad/template/agents/: manager.md  ticket-manager.md  worker.md
cli/src/agent_squad/template/scripts/: linear-graphql.sh
cli/src/agent_squad/template/skills/assign-worker/: SKILL.md
cli/src/agent_squad/template/skills/linear/: SKILL.md
cli/src/agent_team/: cli.py  loader.py
cli/src/agent_team/commands/: __init__.py  agent.py  doctor.py  instance.py  run.py  skill.py
cli/src/agent_team/template/: template.toml
docs/: experiment.md  getting-started.md  index.md
documentation/: ab-experiment-harness.md  agent-contracts.md  architecture.md  codex-runtime-doc-validation-2026-06-22.md  codex-runtime-feature-matrix-2026-06-22.md  composable-units.md  deadlines.md  distributed-resources.md  dynamic-teams.md  (+26 more)
(+571 files in other folders)
